--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^8.2.3",
+    "@vueuse/integrations": "^8.2.3",
     "echarts": "^5.3.1",
+    "js-cookie": "^3.0.1",
+    "universal-cookie": "^4.0.4",
     "vue": "^3.2.25",
     "vue-router": "4",
     "vue-template-compiler": "^2.6.14",
@@ -16,6 +20,7 @@
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^1.1.1",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.22",
     "@vitejs/plugin-vue": "^2.2.0",
     "element-plus": "^2.0.5",
