--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json_server": "json-server __json_server_mock_/db.json -r __json_server_mock_/json-server.json"
   },
   "dependencies": {
     "@vueuse/core": "^8.2.3",
     "@vueuse/integrations": "^8.2.3",
+    "axios": "^0.26.1",
     "echarts": "^5.3.1",
     "js-cookie": "^3.0.1",
+    "pinia": "^2.0.13",
     "universal-cookie": "^4.0.4",
     "vue": "^3.2.25",
     "vue-router": "4",
@@ -22,8 +25,16 @@
     "@element-plus/icons-vue": "^1.1.1",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "element-plus": "^2.0.5",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-define-config": "^1.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.6.0",
+    "json-server": "^0.17.0",
     "node-sass": "^7.0.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
